# IoTService

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh  install.sh
client/tools/grpcurl/: build_proto.sh  grpcurl_client.sh
client/tools/python/: build_proto.sh  grpc_client.py
cmake/: check-clang-format.sh  clang-tidy.cmake  clang_format.cmake  clang_tidy.cmake  deps.cmake  grpc.cmake  gtest.cmake
docs/: clang-tidy-check.md  commit-msg.md  deps.md  grpcurl.md  plugin.md
proto/: CMakeLists.txt  account_service.proto  iot_service.proto
scripts/: dump_tree_with_content.py  install-hooks.sh  kill.sh  run-clang-tidy-check.sh
scripts/git-hooks/: README.md  commit-msg  commit_prompt.py  prepare-commit-msg
source/: CMakeLists.txt
source/IotFramework/: CMakeLists.txt
source/IotFramework/device/: DeviceManager.cpp  DeviceManager.h
source/IotFramework/include/framework/: DeviceInfo.h  MessageRouter.h  User.h  WorkContexts.h
source/IotFramework/message/: MessageRouter.cpp  MessageRouter.h  MessageTask.h
source/IotFramework/thread/handler/: Handler.h  HandlerThread.h  TaskHandler.h
source/IotFramework/thread/queue/: TaskQueue.h
source/IotFramework/thread/task/: GenericTask.h  Task.h
source/IotFramework/user/: UserManager.cpp  UserManager.h
source/IotService/: CMakeLists.txt  main.cpp
source/IotService/display/: CMakeLists.txt  Cargo.toml
source/IotService/display/src/: lib.rs
source/IotService/grpc/: IoTServiceImpl.cpp  IoTServiceImpl.h  iot_service_impl.cpp  iot_service_impl.h
source/IotUtils/: CMakeLists.txt
source/IotUtils/Logger/: Logger.cpp
source/IotUtils/include/utils/: Log.h
source/common/: CMakeLists.txt
source/core/message/: CMakeLists.txt
source/core/message/include/: MessageRouter.h  MessageTask.h
source/core/message/src/: MessageRouter.cpp
source/core/thread/: CMakeLists.txt
source/core/thread/handler/: Handler.h  HandlerThread.h  TaskHandler.h
source/core/thread/queue/: TaskQueue.h
source/iface/device/: CMakeLists.txt
source/iface/device/include/: DeviceManagerFactory.h  IDeviceManager.h
source/iface/user/: CMakeLists.txt
source/iface/user/include/: IUserManager.h  UserManagerFactory.h
source/impls/device/: CMakeLists.txt
source/impls/device/default/: CMakeLists.txt
source/impls/device/default/include/: DefaultDeviceManager.h
source/impls/device/default/src/: DefaultDeviceManager.cpp
source/impls/user/: CMakeLists.txt
source/impls/user/default/: CMakeLists.txt
source/impls/user/default/include/: DefaultUserManager.h
source/impls/user/default/src/: DefaultUserManager.cpp
source/impls/user/mock/: CMakeLists.txt
source/impls/user/mock/include/: MockUserManager.h
source/impls/user/mock/src/: MockUserManager.cpp
source/include/common/: NameSpaceDef.h  ShardedMap.h
source/plugin/: CMakeLists.txt
source/plugin/include/: PluginFactory.h  PluginRegistry.h
source/service/: CMakeLists.txt  main.cpp
source/service/display/: CMakeLists.txt
source/service/grpc/: IoTServiceImpl.cpp  IoTServiceImpl.h
source/utils/: CMakeLists.txt
source/utils/include/: TimeUtils.h
tests/: CMakeLists.txt
tests/IotFramework/device/: DeviceManagerTest.cpp
tests/IotFramework/message/: MessageRouterTest.cpp
tests/device/: DeviceManagerTest.cpp
tests/message/: MessageRouterTest.cpp
tests/time/: TimeTest.cpp
tests/user/: UserManagerTest.cpp
tools/: check-code-style.sh
